2007-01-30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/except.hxx, src/except.cxx, test/test000.cxx:
  - New mixin base class pqxx_exception, thanks Marcel Loose
 VERSION:
  - Bumped to 2.6.10
2007-01-11  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test010.cxx:
  - Work around gcc bug with -fprofile-arcs in string initializer
 tools/pqxx-fulltest:
  - Allow FTPSERVER and FTPDIR to be overridden
  - Keep log of postgres builds--may require packages to be installed
2007-01-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, test/test000.cxx:
  - Test password encryption
 include/pqxx/cursor.hxx, test/test003.cxx:
  - Test cursor_base::close()
  - Made cursor fetch()/move() functions pure-virtual
  - Full test coverage
2007-01-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test085.cxx:
  - Skip if backend version does not support prepared statements
  - Work around syntax error with prepared-statement parameters on 7.3 backend
 test/test091.cxx:
  - "Inert cursor" problem is fixed in backend 7.4, not 7.3.
 tools/maketemporary, tools/pqxx-fulltest, tools/preprelease:
  - Made "export" usage compatible with more shells
  - export TMPDIR
  - Skip documentation builds after the very first build
2007-01-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - Added simulate_failure() for testing, thanks Joshua Moore-Oliva
 test/test094.cxx:
  - New
  - Tests transactor in-doubt handling, thanks Joshua Moore-Oliva
 tools/pqxx-fulltest:
  - Set TMPDIR to test directory to keep /tmp clean
 tools/preprelease:
  - Can leave its files in other places than /tmp (set by TMPDIR variable)
2007-01-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - Eliminated unnecessary check_result()
  - Exec() cached protocol version across connection resets
  - PQprepare()/PQexecPrepared() only work with protocol 3.0