@@ -100,7 +100,7 @@ public:
   virtual ~transaction() throw ()
   {
 #ifdef PQXX_QUIET_DESTRUCTORS
-    internal::disable_noticer Quiet(conn());
+    disable_noticer Quiet(conn());
 #endif
     End();
   }
